--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>🌸🌸🌸</title>
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
@@ -29,11 +29,6 @@
 
       <div id="result" class="result">
       </div>
-    </div>
-
-    <!-- Overlay: تأثيرات فهد ونايف (اختياري) -->
-    <div id="overlay" class="overlay" aria-hidden="true">
-      <img id="overlayImg" src="assets/game-over.png" alt="overlay" class="overlay-img">
     </div>
   </div>
 
